--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   const API_URL = "https://script.google.com/macros/s/AKfycbzxq3D8DnKbsXRkiO2z76gG0zz6fZIqEvQEVqXjDRjCGWx-o630qndwjNNsTi6A6LNf/exec";
   
   // Link trang làm bài (Trung Tâm An Phúc)
-  const EXAM_PAGE_URL = "https://trungtamanphuc.io.vn";
+  const EXAM_PAGE_URL = "https://script.google.com/macros/s/AKfycbw4lhL3qwgcrlJD0QRoemyOmqIoxdE2a465Um7gnSkbElyicHcnCMfq95yPN7dGjTE6NQ/exec";
 
   let regularData = [], periodicData = [], isAdmin = false, currentTab = 'regular', currentItem = null;
 
@@ -388,3 +388,4 @@
 
 </body>
 </html>
+
